Commiting code for negative variants